test/tests/errors/error-class-no-own3.sm
// false
// false
// false
/**/
/**/

program {
    class T {
        private own x: int = 1;
    }
}